--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         // performance, uncomment the following line:
         // config.devicePixelRatio = 1;
 
-        unityShowBanner('WebGL builds are not supported on mobile devices.');
+        //unityShowBanner('WebGL builds are not supported on mobile devices.');
       } else {
         // Desktop style: Render the game canvas in a window that can be maximized to fullscreen:
 
@@ -98,6 +98,20 @@
       }
 
       loadingBar.style.display = "block";
+	  function detectDevice() {
+			if (/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent)) {
+				return "mobile";
+			} else {
+				return "pc";
+			}
+			
+	  }
+	  
+	  function informUnityOfDeviceType() {
+			var deviceType = detectDevice();
+			gameInstance.SendMessage('GameManager', 'InformDeviceType', deviceType);
+	  }
+	  
 
       var script = document.createElement("script");
       script.src = loaderUrl;
