--- a/index.html
+++ b/index.html
@@ -98,21 +98,7 @@
       }
 
       loadingBar.style.display = "block";
-	  function detectDevice() {
-			if (/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent)) {
-				return "mobile";
-			} else {
-				return "pc";
-			}
-			
-	  }
 	  
-	  function informUnityOfDeviceType() {
-			var deviceType = detectDevice();
-			gameInstance.SendMessage('GameManager', 'InformDeviceType', deviceType);
-	  }
-	  
-
       var script = document.createElement("script");
       script.src = loaderUrl;
       script.onload = () => {
@@ -129,5 +115,19 @@
       };
       document.body.appendChild(script);
     </script>
+	<script>
+    function detectDevice() {
+        if (/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent)) {
+            return "mobile";
+        } else {
+            return "pc";
+        }
+    }
+
+    function informUnityOfDeviceType() {
+        var deviceType = detectDevice();
+        gameInstance.SendMessage('GameManager', 'InformDeviceType', deviceType);
+    }
+</script>
   </body>
 </html>
