Updated Test for Harddrop speed and New Scoring

--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Test.loader.js";
+      var loaderUrl = buildUrl + "/Teste3.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Test.data.unityweb",
-        frameworkUrl: buildUrl + "/Test.framework.js.unityweb",
-        codeUrl: buildUrl + "/Test.wasm.unityweb",
+        dataUrl: buildUrl + "/Teste3.data.unityweb",
+        frameworkUrl: buildUrl + "/Teste3.framework.js.unityweb",
+        codeUrl: buildUrl + "/Teste3.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Teste",
