Build Delivery For Sprint 1

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | Teste</title>
+    <title>Unity WebGL Player | BisCCXP</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
   <body>
     <div id="unity-container" class="unity-desktop">
-      <canvas id="unity-canvas" width=1920 height=1080></canvas>
+      <canvas id="unity-canvas" width=1280 height=720></canvas>
       <div id="unity-loading-bar">
         <div id="unity-logo"></div>
         <div id="unity-progress-bar-empty">
@@ -20,7 +20,7 @@
       <div id="unity-footer">
         <div id="unity-webgl-logo"></div>
         <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">Teste</div>
+        <div id="unity-build-title">BisCCXP</div>
       </div>
     </div>
     <script>
@@ -56,14 +56,14 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Teste3.loader.js";
+      var loaderUrl = buildUrl + "/BISCCXP_0.0.1.0_WEBGL.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Teste3.data.unityweb",
-        frameworkUrl: buildUrl + "/Teste3.framework.js.unityweb",
-        codeUrl: buildUrl + "/Teste3.wasm.unityweb",
+        dataUrl: buildUrl + "/BISCCXP_0.0.1.0_WEBGL.data.unityweb",
+        frameworkUrl: buildUrl + "/BISCCXP_0.0.1.0_WEBGL.framework.js.unityweb",
+        codeUrl: buildUrl + "/BISCCXP_0.0.1.0_WEBGL.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
-        companyName: "DefaultCompany",
-        productName: "Teste",
+        companyName: "DXGameworks",
+        productName: "BisCCXP",
         productVersion: "1.0",
         showBanner: unityShowBanner,
       };
@@ -93,8 +93,8 @@
       } else {
         // Desktop style: Render the game canvas in a window that can be maximized to fullscreen:
 
-        canvas.style.width = "1920px";
-        canvas.style.height = "1080px";
+        canvas.style.width = "1280px";
+        canvas.style.height = "720px";
       }
 
       loadingBar.style.display = "block";
