--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/TestOriRepo.loader.js";
+      var loaderUrl = buildUrl + "/Test2.loader.js";
       var config = {
-        dataUrl: buildUrl + "/TestOriRepo.data.unityweb",
-        frameworkUrl: buildUrl + "/TestOriRepo.framework.js.unityweb",
-        codeUrl: buildUrl + "/TestOriRepo.wasm.unityweb",
+        dataUrl: buildUrl + "/Test2.data.unityweb",
+        frameworkUrl: buildUrl + "/Test2.framework.js.unityweb",
+        codeUrl: buildUrl + "/Test2.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DXGameworks",
         productName: "BisCCXP",
