--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Test8.loader.js";
+      var loaderUrl = buildUrl + "/Test.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Test8.data.unityweb",
-        frameworkUrl: buildUrl + "/Test8.framework.js.unityweb",
-        codeUrl: buildUrl + "/Test8.wasm.unityweb",
+        dataUrl: buildUrl + "/Test.data.unityweb",
+        frameworkUrl: buildUrl + "/Test.framework.js.unityweb",
+        codeUrl: buildUrl + "/Test.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DXGameworks",
         productName: "BisCCXP",
