--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div id="unity-container" class="unity-desktop">
-      <canvas id="unity-canvas" width=1280 height=720></canvas>
+      <canvas id="unity-canvas" width=1900 height=980></canvas>
       <div id="unity-loading-bar">
         <div id="unity-logo"></div>
         <div id="unity-progress-bar-empty">
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/2.loader.js";
+      var loaderUrl = buildUrl + "/WebGL Builds.loader.js";
       var config = {
-        dataUrl: buildUrl + "/2.data.unityweb",
-        frameworkUrl: buildUrl + "/2.framework.js.unityweb",
-        codeUrl: buildUrl + "/2.wasm.unityweb",
+        dataUrl: buildUrl + "/WebGL Builds.data.unityweb",
+        frameworkUrl: buildUrl + "/WebGL Builds.framework.js.unityweb",
+        codeUrl: buildUrl + "/WebGL Builds.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DXGameworks",
         productName: "BisCCXP",
@@ -83,20 +83,18 @@
         meta.content = 'width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, shrink-to-fit=yes';
         document.getElementsByTagName('head')[0].appendChild(meta);
         container.className = "unity-mobile";
+        canvas.className = "unity-mobile";
 
         // To lower canvas resolution on mobile devices to gain some
         // performance, uncomment the following line:
         // config.devicePixelRatio = 1;
 
-        canvas.style.width = window.innerWidth + 'px';
-        canvas.style.height = window.innerHeight + 'px';
-
-        watchScreen();
+        unityShowBanner('WebGL builds are not supported on mobile devices.');
       } else {
         // Desktop style: Render the game canvas in a window that can be maximized to fullscreen:
 
-        canvas.style.width = "1280px";
-        canvas.style.height = "720px";
+        canvas.style.width = "1900px";
+        canvas.style.height = "980px";
       }
 
       loadingBar.style.display = "block";
@@ -116,21 +114,6 @@
         });
       };
       document.body.appendChild(script);
-
-      var sWidth = window.innerWidth;
-      var sHeight = window.innerHeight;
-      function watchScreen() {
-        requestAnimationFrame(watchScreen);
-        if(sWidth !== window.innerWidth || sHeight != window.innerHeight){
-          if(window.onOrientationChange) {
-            window.onOrientationChange(window.orientation);
-          }
-          sWidth = window.innerWidth;
-          sHeight = window.innerHeight;
-          canvas.style.width = sWidth + 'px';
-          canvas.style.height = sHeight + 'px';
-        }
-      }
     </script>
   </body>
 </html>
