--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/21.loader.js";
+      var loaderUrl = buildUrl + "/22.loader.js";
       var config = {
-        dataUrl: buildUrl + "/21.data.unityweb",
-        frameworkUrl: buildUrl + "/21.framework.js.unityweb",
-        codeUrl: buildUrl + "/21.wasm.unityweb",
+        dataUrl: buildUrl + "/22.data.unityweb",
+        frameworkUrl: buildUrl + "/22.framework.js.unityweb",
+        codeUrl: buildUrl + "/22.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DXGameworks",
         productName: "Bis na CCXP",
@@ -87,9 +87,14 @@
         // To lower canvas resolution on mobile devices to gain some
         // performance, uncomment the following line:
         // config.devicePixelRatio = 1;
-
-        canvas.style.width = window.innerWidth + 'px';
-        canvas.style.height = window.innerHeight + 'px';
+		if (/iPhone|iPad|iPod/i.test(navigator.userAgent)) {
+			canvas.style.width = '100%';
+			canvas.style.height = '100%';
+		} else 
+		{
+			canvas.style.width = window.innerWidth + 'px';
+			canvas.style.height = window.innerHeight + 'px';
+		}
 
         watchScreen();
       } else {
