--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/2ndOfOctoberBuild.loader.js";
+      var loaderUrl = buildUrl + "/3rd)fOctoberBuild.loader.js";
       var config = {
-        dataUrl: buildUrl + "/2ndOfOctoberBuild.data.unityweb",
-        frameworkUrl: buildUrl + "/2ndOfOctoberBuild.framework.js.unityweb",
-        codeUrl: buildUrl + "/2ndOfOctoberBuild.wasm.unityweb",
+        dataUrl: buildUrl + "/3rd)fOctoberBuild.data.unityweb",
+        frameworkUrl: buildUrl + "/3rd)fOctoberBuild.framework.js.unityweb",
+        codeUrl: buildUrl + "/3rd)fOctoberBuild.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DXGameworks",
         productName: "BisCCXP",
