--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | BisCCXP</title>
+    <title>Bis na CCXP</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
@@ -18,9 +18,9 @@
       </div>
       <div id="unity-warning"> </div>
       <div id="unity-footer">
-        <div id="unity-webgl-logo"></div>
+        <!--<div id="unity-webgl-logo"></div>-->
         <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">BisCCXP</div>
+        <!--<div id="unity-build-title">Bis na CCXP</div>-->
       </div>
     </div>
     <script>
@@ -56,14 +56,14 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/3rd)fOctoberBuild.loader.js";
+      var loaderUrl = buildUrl + "/Oct4Build.loader.js";
       var config = {
-        dataUrl: buildUrl + "/3rd)fOctoberBuild.data.unityweb",
-        frameworkUrl: buildUrl + "/3rd)fOctoberBuild.framework.js.unityweb",
-        codeUrl: buildUrl + "/3rd)fOctoberBuild.wasm.unityweb",
+        dataUrl: buildUrl + "/Oct4Build.data.unityweb",
+        frameworkUrl: buildUrl + "/Oct4Build.framework.js.unityweb",
+        codeUrl: buildUrl + "/Oct4Build.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DXGameworks",
-        productName: "BisCCXP",
+        productName: "Bis na CCXP",
         productVersion: "1.0",
         showBanner: unityShowBanner,
       };
