--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/oct5Halfbuild.loader.js";
+      var loaderUrl = buildUrl + "/oct5REV76build.loader.js";
       var config = {
-        dataUrl: buildUrl + "/oct5Halfbuild.data.unityweb",
-        frameworkUrl: buildUrl + "/oct5Halfbuild.framework.js.unityweb",
-        codeUrl: buildUrl + "/oct5Halfbuild.wasm.unityweb",
+        dataUrl: buildUrl + "/oct5REV76build.data.unityweb",
+        frameworkUrl: buildUrl + "/oct5REV76build.framework.js.unityweb",
+        codeUrl: buildUrl + "/oct5REV76build.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DXGameworks",
         productName: "Bis na CCXP",
