--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/OCt5Version.loader.js";
+      var loaderUrl = buildUrl + "/Oct5BuildVersion2.loader.js";
       var config = {
-        dataUrl: buildUrl + "/OCt5Version.data.unityweb",
-        frameworkUrl: buildUrl + "/OCt5Version.framework.js.unityweb",
-        codeUrl: buildUrl + "/OCt5Version.wasm.unityweb",
+        dataUrl: buildUrl + "/Oct5BuildVersion2.data.unityweb",
+        frameworkUrl: buildUrl + "/Oct5BuildVersion2.framework.js.unityweb",
+        codeUrl: buildUrl + "/Oct5BuildVersion2.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DXGameworks",
         productName: "Bis na CCXP",
