--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/OC.loader.js";
+      var loaderUrl = buildUrl + "/1.loader.js";
       var config = {
-        dataUrl: buildUrl + "/OC.data.unityweb",
-        frameworkUrl: buildUrl + "/OC.framework.js.unityweb",
-        codeUrl: buildUrl + "/OC.wasm.unityweb",
+        dataUrl: buildUrl + "/1.data.unityweb",
+        frameworkUrl: buildUrl + "/1.framework.js.unityweb",
+        codeUrl: buildUrl + "/1.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DXGameworks",
         productName: "Bis na CCXP",
