--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/4.loader.js";
+      var loaderUrl = buildUrl + "/Redo.loader.js";
       var config = {
-        dataUrl: buildUrl + "/4.data.unityweb",
-        frameworkUrl: buildUrl + "/4.framework.js.unityweb",
-        codeUrl: buildUrl + "/4.wasm.unityweb",
+        dataUrl: buildUrl + "/Redo.data.unityweb",
+        frameworkUrl: buildUrl + "/Redo.framework.js.unityweb",
+        codeUrl: buildUrl + "/Redo.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DXGameworks",
         productName: "Bis na CCXP",
