--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/SqareAreaBuild.loader.js";
+      var loaderUrl = buildUrl + "/SQUAREAREV2.loader.js";
       var config = {
-        dataUrl: buildUrl + "/SqareAreaBuild.data.unityweb",
-        frameworkUrl: buildUrl + "/SqareAreaBuild.framework.js.unityweb",
-        codeUrl: buildUrl + "/SqareAreaBuild.wasm.unityweb",
+        dataUrl: buildUrl + "/SQUAREAREV2.data.unityweb",
+        frameworkUrl: buildUrl + "/SQUAREAREV2.framework.js.unityweb",
+        codeUrl: buildUrl + "/SQUAREAREV2.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DXGameworks",
         productName: "Bis na CCXP",
