--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/SQRV3.loader.js";
+      var loaderUrl = buildUrl + "/SqrV4.loader.js";
       var config = {
-        dataUrl: buildUrl + "/SQRV3.data.unityweb",
-        frameworkUrl: buildUrl + "/SQRV3.framework.js.unityweb",
-        codeUrl: buildUrl + "/SQRV3.wasm.unityweb",
+        dataUrl: buildUrl + "/SqrV4.data.unityweb",
+        frameworkUrl: buildUrl + "/SqrV4.framework.js.unityweb",
+        codeUrl: buildUrl + "/SqrV4.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DXGameworks",
         productName: "Bis na CCXP",
