--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/SQRV5.loader.js";
+      var loaderUrl = buildUrl + "/SqRV6.loader.js";
       var config = {
-        dataUrl: buildUrl + "/SQRV5.data.unityweb",
-        frameworkUrl: buildUrl + "/SQRV5.framework.js.unityweb",
-        codeUrl: buildUrl + "/SQRV5.wasm.unityweb",
+        dataUrl: buildUrl + "/SqRV6.data.unityweb",
+        frameworkUrl: buildUrl + "/SqRV6.framework.js.unityweb",
+        codeUrl: buildUrl + "/SqRV6.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DXGameworks",
         productName: "Bis na CCXP",
