--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
         // performance, uncomment the following line:
         // config.devicePixelRatio = 1;
 
-        canvas.style.width = window.innerWidth + 'px';
-        canvas.style.height = window.innerHeight + 'px';
+        canvas.style.width = '100%';//window.innerWidth + 'px';
+        canvas.style.height = '100%';//window.innerHeight + 'px';
 
         watchScreen();
       } else {
@@ -121,10 +121,10 @@
       var sHeight = window.innerHeight;
       function watchScreen() {
         requestAnimationFrame(watchScreen);
-        if(sWidth !== window.innerWidth || sHeight != window.innerHeight){
-          if(window.onOrientationChange) {
-            window.onOrientationChange(window.orientation);
-          }
+        if (sWidth !== window.innerWidth || sHeight != window.innerHeight) {
+          // Dispatching the standard orientationchange event
+          window.dispatchEvent(new Event('orientationchange'));
+
           sWidth = window.innerWidth;
           sHeight = window.innerHeight;
           canvas.style.width = sWidth + 'px';
