--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
         </div>
       </div>
       <div id="unity-warning"> </div>
-      <div id="unity-footer">
+      <!--<div id="unity-footer">-->
         <!--<div id="unity-webgl-logo"></div>-->
-        <div id="unity-fullscreen-button"></div>
+        <!--<div id="unity-fullscreen-button"></div>-->
         <!--<div id="unity-build-title">Bis na CCXP</div>-->
-      </div>
+      <!--</div>-->
     </div>
     <script>
       var container = document.querySelector("#unity-container");
@@ -95,8 +95,8 @@
       } else {
         // Desktop style: Render the game canvas in a window that can be maximized to fullscreen:
 
-        canvas.style.width = "1280px";
-        canvas.style.height = "720px";
+        canvas.style.width = '100%';
+        canvas.style.height = '100%';
       }
 
       loadingBar.style.display = "block";
